# dicom-viewer

./: .gitignore  RELEASING.md  dicom-viewer.spec  pyproject.toml
.github/workflows/: release.yml  tests.yml
assets/: icon.icns
docs/superpowers/plans/: 2026-05-13-dicom-viewer.md
docs/superpowers/specs/: 2026-05-13-dicom-viewer-design.md
scripts/: dicom-viewer.desktop  dicom-viewer.nsi  dicom-viewer.xml  dmg-settings.py  install-file-association.sh  make_icons.py
src/dicom_viewer/: __main__.py  app.py
src/dicom_viewer/core/: document.py  mesh_export.py  region.py  study.py  volume.py
src/dicom_viewer/core/segmentation/: __init__.py  base.py  click_seed.py  medsam.py  morphology.py  region_grow.py  threshold.py
src/dicom_viewer/io/: config.py  dicom_loader.py  nifti.py  project.py
src/dicom_viewer/rendering/: mesh_preview.py  slice_renderer.py  volume_renderer.py
src/dicom_viewer/ui/: main_window.py  status_model.py
src/dicom_viewer/ui/panels/: export.py  segmentation.py  windowing.py
src/dicom_viewer/ui/widgets/: labeled_slider.py  mesh_preview_dialog.py  mesh_preview_view.py  slice_view.py  volume3d_view.py
tests/: conftest.py
tests/core/: test_click_seed.py  test_document.py  test_medsam.py  test_mesh_export.py  test_region.py  test_segmentation_morphology.py  test_segmentation_region_grow.py  test_segmentation_threshold.py  test_study.py  test_volume.py
tests/fixtures/: make_synthetic_series.py  test_make_synthetic_series.py
tests/integration/: test_end_to_end.py
tests/io/: test_config.py  test_dicom_loader.py  test_nifti.py  test_project.py
tests/rendering/: test_mesh_preview.py  test_slice_renderer.py  test_volume_renderer.py
tests/ui/: test_export_panel.py  test_main_window_project.py  test_mesh_preview_dialog.py  test_mesh_preview_view.py  test_segmentation_panel.py  test_slice_view.py  test_status_model.py  test_volume3d_view.py  test_windowing_panel.py
