[project]
name = "dicom-viewer"
version = "0.1.0"
description = "Personal DICOM viewer with 3D-printable section export"
requires-python = ">=3.10"
dependencies = [
    "pydicom>=2.4",
    "pylibjpeg>=2.0",
    "pylibjpeg-libjpeg>=2.1",
    "pylibjpeg-openjpeg>=2.2",
    "nibabel>=5.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "SimpleITK>=2.3",
    "vtk>=9.3",
    "PyQt6>=6.6",
    # MedSAM-based AI segmenter. Heavy (torch ~1GB+ on disk) but bundled by
    # default so the shipped installers include the feature out-of-the-box.
    # Model weights (~360MB) still auto-download from HuggingFace on first use.
    #
    # torch is pinned to a CUDA-12-era wheel range. Newer torch wheels bundle
    # CUDA 13 runtimes that very few user machines have drivers for; the
    # mismatch core-dumps the process the moment torch initialises a CUDA
    # context. The runtime defaults to CPU regardless, but installing an
    # older wheel also keeps the installer smaller and avoids surprises for
    # users who set DICOM_VIEWER_MEDSAM_CUDA=1.
    # transformers 4.x and 5.x are both API-compatible for SAM here.
    "torch>=2.1,<2.5",
    "transformers>=4.40",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
dicom-viewer = "dicom_viewer.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dicom_viewer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
