[project]
name = "dicom-viewer"
version = "0.1.0"
description = "Personal DICOM viewer with 3D-printable section export"
requires-python = ">=3.10"
dependencies = [
    "pydicom>=2.4",
    "pylibjpeg>=2.0",
    "pylibjpeg-libjpeg>=2.1",
    "pylibjpeg-openjpeg>=2.2",
    "nibabel>=5.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "SimpleITK>=2.3",
    "vtk>=9.3",
    "PyQt6>=6.6",
    # MedSAM-based AI segmenter. Heavy (torch ~1GB+ on disk) but bundled by
    # default so the shipped installers include the feature out-of-the-box.
    # Model weights (~360MB) still auto-download from HuggingFace on first use.
    #
    # No upper bounds: forcing torch<2.5 turned out to be too aggressive —
    # transformers 5.x depends on torch.library schema APIs that only exist
    # in torch>=2.5, so the pin caused a hard import-time failure
    # ("infer_schema(func): Parameter input has unsupported type torch.Tensor").
    # Letting pip pick the current pair (recent torch + current transformers)
    # is the safest default; CUDA-mismatch crashes are now prevented at
    # runtime by defaulting to CPU regardless of which wheel got installed.
    "torch>=2.1",
    "transformers>=4.40",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
dicom-viewer = "dicom_viewer.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dicom_viewer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
